--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "lint:css-fix": "stylelint **/*.jsx --fix"
     },
     "dependencies": {
+        "@fortawesome/free-solid-svg-icons": "^6.5.2",
+        "@fortawesome/react-fontawesome": "^0.2.1",
         "@radix-ui/react-slot": "^1.0.1",
         "@reduxjs/toolkit": "^1.9.1",
         "@uiw/react-md-editor": "^4.0.1",
